core/ingress/traefik/11-rbac.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: timoni
