core/ingress/traefik/16-middleware-limits.yaml
# Sets the maximum request body to 100Mb
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  namespace: timoni
  name: limit
spec:
  buffering:
    maxRequestBodyBytes: 100000000
