core/ingress/traefik/17-middleware-headers.yaml
# Set the X-Frame-Options to SAMEORIGIN.
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  namespace: timoni
  name: headers
spec:
  headers:
    X-Frame-Options: "SAMEORIGIN"
