core/ingress/traefik/14-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: timoni
spec:
  entryPoints:
    - traefik
  routes:
    - match: PathPrefix(`/api`) || PathPrefix(`/dashboard`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
